--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
             <div class="card-team">
             <h3 class="personal-name">Игорь Демьяненко</h3>
             <p class="personal-text">Product Designer</p>
+            <ul class="personal-soc list">
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"><use href="./images/icon-svg.svg#icon-instagram"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-twitter"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-facebook"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-linkedin"></use></svg></a></li>
+            </ul>
             </div>
           </li>
           <li class="personal-item list">
@@ -153,6 +159,12 @@
              <div class="card-team">
             <h3 class="personal-name">Ольга Репина</h3>
             <p class="personal-text">Frontend Developer</p>
+          <ul class="personal-soc list">
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"><use href="./images/icon-svg.svg#icon-instagram"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-twitter"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-facebook"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-linkedin"></use></svg></a></li>
+            </ul>
            </div>
           </li>
           <li class="personal-item list">
@@ -166,6 +178,12 @@
              <div class="card-team">
             <h3 class="personal-name">Николай Тарасов</h3>
             <p class="personal-text">Marketing</p>
+            <ul class="personal-soc list">
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"><use href="./images/icon-svg.svg#icon-instagram"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-twitter"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-facebook"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-linkedin"></use></svg></a></li>
+            </ul>
             </div>
           </li>
           <li class="personal-item list">
@@ -179,6 +197,12 @@
              <div class="card-team">
             <h3 class="personal-name">Михаил Ермаков</h3>
             <p class="personal-text">UI Designer</p>
+            <ul class="personal-soc list">
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"><use href="./images/icon-svg.svg#icon-instagram"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-twitter"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-facebook"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-linkedin"></use></svg></a></li>
+            </ul>
              </div>
           </li>
         </ul></div>
@@ -214,7 +238,42 @@
           </li>
         </ul>
       </address>
-      
+      </div>
+      <!-----------------------footer-link-------------------->
+      <div class=" container footer-soc">
+        <h2 class="title-footer-soc">Присойденяйтесь</h2>
+          <ul class="list list-footer-soc">
+            <li class="item-footer-soc">
+              <a href="" class="link link-footer-soc">
+                <svg class="icon-footer-soc">
+                  <use href="./images/icon-svg.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <svg>
+                  <use></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <svg>
+                  <use></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="">
+                <svg>
+                  <use></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </h2>
+      </div>
     </footer>
   </body>
 </html>
