--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
       </nav>
       <ul class="header-address list header-container">
         <li class="header-contact">
-          <a href="mailto:info@devstudio.com" class="header-mail header link accent"
-            >info@devstudio.com</a
-          >
+          <a href="mailto:info@devstudio.com" class="header-mail header link accent">
+          <svg class="mail-logo icon"width="16"height="12"><use href="./images/icon-svg.svg#icon-mail"></use></svg>
+            info@devstudio.com
+        </a>
         </li>
-        <li class="header-contact">
-          <a href="tel:+380961111111" class="header-tel header link accent">+38 096 111 11 11</a>
+        <li class="header-contact ">
+          <a href="tel:+380961111111" class="header-tel header link accent">
+          <svg class="phone-logo icon"width="16"height="12"><use href="./images/icon-svg.svg#icon-phone"></use></svg>
+          +38 096 111 11 11</a>
         </li>
       </ul>
       </div>
@@ -61,6 +64,9 @@
           <h2 class="benefits-title visually-hidden">Особенности компании</h2>
         <ul class="benefits-list list">
           <li class="benefits-item">
+            <div class="benefits-img">
+              <svg class="benefits-icon"width="70"height="70"><use href="./images/icon-svg.svg#icon-antenna"></use></svg>
+            </div>
             <h3 class="benefits-pre-text">Внимание к деталям</h3>
             <p class="benefits-text">
               Идейные соображения, а также начало повседневной работы по
@@ -68,6 +74,9 @@
             </p>
           </li>
           <li class="benefits-item">
+            <div class="benefits-img">
+              <svg class="benefits-icon"width="70"height="70"><use href="./images/icon-svg.svg#icon-clock"></use></svg>
+            </div>
             <h3 class="benefits-pre-text">Пунктуальность</h3>
             <p class="benefits-text">
               Задача организации, в особенности же рамки и место обучения кадров
@@ -75,6 +84,9 @@
             </p>
           </li>
           <li class="benefits-item">
+            <div class="benefits-img">
+              <svg class="benefits-icon"width="70"height="70"><use href="./images/icon-svg.svg#icon-diagram"></use></svg>
+            </div>
             <h3 class="benefits-pre-text">Планирование</h3>
             <p class="benefits-text">
               Равным образом консультация с широким активом в значительной
@@ -82,6 +94,9 @@
             </p>
           </li>
           <li class="benefits-item">
+            <div class="benefits-img">
+              <svg class="benefits-icon"width="70"height="70"><use href="./images/icon-svg.svg#icon-astronaut"></use></svg>
+            </div>
             <h3 class="benefits-pre-text">Современные технологии</h3>
             <p class="benefits-text">
               Значимость этих проблем настолько очевидна, что реализация
@@ -141,10 +156,10 @@
             <h3 class="personal-name">Игорь Демьяненко</h3>
             <p class="personal-text">Product Designer</p>
             <ul class="personal-soc list">
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"><use href="./images/icon-svg.svg#icon-instagram"></use></svg></a></li>
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-twitter"></use></svg></a></li>
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-facebook"></use></svg></a></li>
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-linkedin"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"><use href="./images/icon-svg.svg#icon-instagram"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-twitter"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-facebook"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-linkedin"></use></svg></a></li>
             </ul>
             </div>
           </li>
@@ -160,10 +175,10 @@
             <h3 class="personal-name">Ольга Репина</h3>
             <p class="personal-text">Frontend Developer</p>
           <ul class="personal-soc list">
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"><use href="./images/icon-svg.svg#icon-instagram"></use></svg></a></li>
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-twitter"></use></svg></a></li>
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-facebook"></use></svg></a></li>
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-linkedin"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"><use href="./images/icon-svg.svg#icon-instagram"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-twitter"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-facebook"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-linkedin"></use></svg></a></li>
             </ul>
            </div>
           </li>
@@ -179,10 +194,10 @@
             <h3 class="personal-name">Николай Тарасов</h3>
             <p class="personal-text">Marketing</p>
             <ul class="personal-soc list">
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"><use href="./images/icon-svg.svg#icon-instagram"></use></svg></a></li>
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-twitter"></use></svg></a></li>
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-facebook"></use></svg></a></li>
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-linkedin"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"><use href="./images/icon-svg.svg#icon-instagram"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-twitter"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-facebook"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-linkedin"></use></svg></a></li>
             </ul>
             </div>
           </li>
@@ -198,20 +213,71 @@
             <h3 class="personal-name">Михаил Ермаков</h3>
             <p class="personal-text">UI Designer</p>
             <ul class="personal-soc list">
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"><use href="./images/icon-svg.svg#icon-instagram"></use></svg></a></li>
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-twitter"></use></svg></a></li>
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-facebook"></use></svg></a></li>
-              <li class="personal-soc-item"><a href="" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-linkedin"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"><use href="./images/icon-svg.svg#icon-instagram"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-twitter"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-facebook"></use></svg></a></li>
+              <li class="personal-soc-item"><a href="" target="blank" rel="nofollow noopener noreferrer" class="personal-soc-link link"><svg class="personal-soc-icon"> <use href="./images/icon-svg.svg#icon-linkedin"></use></svg></a></li>
             </ul>
              </div>
           </li>
         </ul></div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="container footer-secsion" >
+    <!------------------------- client --------------------------->
+    <section class="client-section section">
+      <div class="our-client container">
+      <h2 class="title-client title">Постоянные клиенты</h2>
+      <ul class="list list-client">
+        <li class="item-client">
+          <a href="" class="link client-link" target="_blank" rel="noreferrer noopener nofollow">
+            <svg class="client-icon" >
+              <use href="/images/icon-svg.svg#icon-yaco"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item-client">
+          <a href="" class="link client-link" target="_blank" rel="noreferrer noopener nofollow">
+            <svg class="client-icon">
+              <use href="/images/icon-svg.svg#icon-tagle-here"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item-client">
+          <a href="" class="link client-link" target="_blank" rel="noreferrer noopener nofollow">
+            <svg class="client-icon">
+              <use href="/images/icon-svg.svg#icon-company"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item-client">
+          <a href="" class="link client-link" target="_blank" rel="noreferrer noopener nofollow">
+            <svg class="client-icon">
+              <use href="/images/icon-svg.svg#icon-foster-peters"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item-client">
+          <a href="" class="link client-link" target="_blank" rel="noreferrer noopener nofollow">
+            <svg class="client-icon">
+              <use href="/images/icon-svg.svg#icon-brend"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="item-client">
+          <a href="" class="link client-link" target="_blank" rel="noreferrer noopener nofollow">
+            <svg class="client-icon">
+              <use href="/images/icon-svg.svg#icon-company-tag-line"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    </section>
       <!-----------------------contacts-footer-------------------->
-      <address class="contact-footer "></address>
+    <section class="footer-section">
+    <footer class="container footer footer-container ">
+      <div class="footer-secsion footer-container" >
+      <address class="contact-footer ">
        <a href="./index.html" class="footer-logo logo link" lang="en"
           ><span class="logo-part">Web</span>Studio</a
         >
@@ -237,43 +303,44 @@
             >
           </li>
         </ul>
-      </address>
       </div>
-      <!-----------------------footer-link-------------------->
-      <div class=" container footer-soc">
-        <h2 class="title-footer-soc">Присойденяйтесь</h2>
+                    <!--------------------------------------------->
+      <div class="footer-soc footer-secsion">
+        <p class="text-footer-soc">Присойденяйтесь</p>
           <ul class="list list-footer-soc">
-            <li class="item-footer-soc">
-              <a href="" class="link link-footer-soc">
+            <li class="item-footer-soc"></li>
+               <a href="" target="_blank" rel="noreferrer nofollow noopener" class="link link-footer-soc">
                 <svg class="icon-footer-soc">
                   <use href="./images/icon-svg.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="">
-                <svg>
-                  <use></use>
+            <li class="item-footer-soc"></li>
+               <a href="" target="_blank" rel="noreferrer nofollow noopener" class="link link-footer-soc">
+                <svg class="icon-footer-soc">
+                  <use href="./images/icon-svg.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="">
-                <svg>
-                  <use></use>
+            <li class="item-footer-soc"></li>
+               <a href="" target="_blank" rel="noreferrer nofollow noopener" class="link link-footer-soc">
+                <svg class="icon-footer-soc">
+                  <use href="./images/icon-svg.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li>
-              <a href="">
-                <svg>
-                  <use></use>
+            <li class="item-footer-soc"></li>
+               <a href="" target="_blank" rel="noreferrer nofollow noopener" class="link link-footer-soc">
+                <svg class="icon-footer-soc">
+                  <use href="./images/icon-svg.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </h2>
+         </address>
       </div>
     </footer>
+  </section>
   </body>
 </html>
