--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-------------------- header -------------------->
-     <header class="header">
+  <header class="header">
       <div class="header-container container ">
       <nav class="header-nav header-container">
        <a href="./index.html" class="header-logo logo link" lang="en"
@@ -24,10 +24,10 @@
         >
         <ul class="header-list list header-container">
           <li class="header-item">
-            <a href="./index.html" class="header-link header link accent">Студия</a>
+            <a href="./index.html" class="header-link header link accent current">Студия</a>
           </li>
           <li class="header-item">
-            <a href="./portfolio.html" class="header-link header link accent current">Портфолио</a>
+            <a href="./portfolio.html" class="header-link header link accent">Портфолио</a>
           </li>
           <li class="header-item">
             <a href="" class="header-link header link accent">Контакты</a>
@@ -36,12 +36,15 @@
       </nav>
       <ul class="header-address list header-container">
         <li class="header-contact">
-          <a href="mailto:info@devstudio.com" class="header-mail header link accent"
-            >info@devstudio.com</a
-          >
+          <a href="mailto:info@devstudio.com" class="header-mail header link accent">
+          <svg class="mail-logo icon"width="16"height="12"><use href="./images/icon-svg.svg#icon-mail"></use></svg>
+            info@devstudio.com
+        </a>
         </li>
-        <li class="header-contact">
-          <a href="tel:+380961111111" class="header-tel header link accent">+38 096 111 11 11</a>
+        <li class="header-contact ">
+          <a href="tel:+380961111111" class="header-tel header link accent">
+          <svg class="phone-logo icon"width="16"height="12"><use href="./images/icon-svg.svg#icon-phone"></use></svg>
+          +38 096 111 11 11</a>
         </li>
       </ul>
       </div>
@@ -153,10 +156,10 @@
       </div>
       </section>
     </main>
-     <footer class="footer">
-      <div class="container footer-secsion" >
-      <!-----------------------contacts-footer-------------------->
-      <address class="contact-footer "></address>
+       <section class="footer-section">
+    <footer class="container footer footer-container ">
+      <div class="footer-secsion footer-container" >
+      <address class="contact-footer ">
        <a href="./index.html" class="footer-logo logo link" lang="en"
           ><span class="logo-part">Web</span>Studio</a
         >
@@ -182,8 +185,44 @@
             >
           </li>
         </ul>
-      </address>
-      
+      </div>
+                    <!--------------------------------------------->
+      <div class="footer-soc footer-secsion">
+        <p class="text-footer-soc">Присойденяйтесь</p>
+          <ul class="list list-footer-soc">
+            <li class="item-footer-soc"></li>
+               <a href="" target="_blank" rel="noreferrer nofollow noopener" class="link link-footer-soc">
+                <svg class="icon-footer-soc">
+                  <use href="./images/icon-svg.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-footer-soc"></li>
+               <a href="" target="_blank" rel="noreferrer nofollow noopener" class="link link-footer-soc">
+                <svg class="icon-footer-soc">
+                  <use href="./images/icon-svg.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-footer-soc"></li>
+               <a href="" target="_blank" rel="noreferrer nofollow noopener" class="link link-footer-soc">
+                <svg class="icon-footer-soc">
+                  <use href="./images/icon-svg.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item-footer-soc"></li>
+               <a href="" target="_blank" rel="noreferrer nofollow noopener" class="link link-footer-soc">
+                <svg class="icon-footer-soc">
+                  <use href="./images/icon-svg.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </h2>
+         </address>
+      </div>
     </footer>
+  </section>
   </body>
 </html>
