--- a/portfolio.html
+++ b/portfolio.html
@@ -24,10 +24,10 @@
         >
         <ul class="header-list list header-container">
           <li class="header-item">
-            <a href="./index.html" class="header-link header link accent current">Студия</a>
+            <a href="./index.html" class="header-link header link accent">Студия</a>
           </li>
           <li class="header-item">
-            <a href="./portfolio.html" class="header-link header link accent">Портфолио</a>
+            <a href="./portfolio.html" class="header-link header link accent current">Портфолио</a>
           </li>
           <li class="header-item">
             <a href="" class="header-link header link accent">Контакты</a>
