--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           </li>
           <li class="inform-item">
             <img
-              src="./images/img-2.jpg"
+              src="./images/img-second.jpg"
               alt="разработка интерфеса"
               width="370"
               height="294"
