--- a/index.html
+++ b/index.html
@@ -52,9 +52,11 @@
     <!-------------------- hero -------------------->
     <main>
       <section class="hero">
+        <div class="container">
         <!--Эффективные решения для вашего бизнеса-->
         <h1 class="hero-title">Эффективные решения  для вашего бизнеса</h1>
         <button type="button" class="hero-button">Заказать услугу</button>
+        </div>
       </section>
       <!-------------------- benefits -------------------->
       
@@ -106,7 +108,7 @@
         </ul></div>
       </section>
       <!-------------------- inform -------------------->
-      <section class="inform">
+      <section class="inform section">
       <div class="container">  
         <h2 class="inform-title title">Чем мы занимаемся</h2>
         <ul class="inform-list list">
@@ -277,10 +279,10 @@
     <section class="footer-section">
     <footer class="container footer footer-container ">
       <div class="footer-secsion footer-container" >
-      <address class="contact-footer ">
        <a href="./index.html" class="footer-logo logo link" lang="en"
           ><span class="logo-part">Web</span>Studio</a
         >
+      <address class="contact-footer ">
         <ul class="contact-list list">
           <li class="contact-item">
             <a
