--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-------------------- header -------------------->
-  <header class="header">
+  <header class="header-portfolio">
       <div class="header-container container ">
       <nav class="header-nav header-container">
        <a href="./index.html" class="header-logo logo link" lang="en"
@@ -51,8 +51,8 @@
     </header>
     <!-------------------- portfolio -------------------->
     <main>
-        <section>
-          <div class="container section">
+        <section class="section">
+          <div class="container">
       <h1 class="title-portfolio visually-hidden">portfolio</h1>
       <ul class="porfolio-list-button">
         <li class="porfolio-item list"><button type="button" class="portfolio-button portfolio-current">Все</button></li>
@@ -156,13 +156,14 @@
       </div>
       </section>
     </main>
+    <!---------------------- footer-portfolio -------------------->
        <section class="footer-section">
     <footer class="container footer footer-container ">
       <div class="footer-secsion footer-container" >
-      <address class="contact-footer ">
        <a href="./index.html" class="footer-logo logo link" lang="en"
           ><span class="logo-part">Web</span>Studio</a
         >
+      <address class="contact-footer ">
         <ul class="contact-list list">
           <li class="contact-item">
             <a
