--- a/portfolio.html
+++ b/portfolio.html
@@ -156,7 +156,7 @@
       </div>
       </section>
     </main>
-    <!---------------------- footer-portfolio -------------------->
+      <!-----------------------contacts-footer-------------------->
        <section class="footer-section">
     <footer class="container footer footer-container ">
       <div class="footer-secsion footer-container" >
