--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <li class="item-client">
             <a href="" class="link client-link" target="_blank" rel="noreferrer noopener nofollow">
               <svg class="client-icon">
-                <use href="/images/icon-svg.svg#icon-company-tag-line"></use>
+                <use href="./images/icon-svg.svg#icon-company-tag-line"></use>
               </svg>
             </a>
           </li>
@@ -276,8 +276,8 @@
       </div>
       </section>
         <!-------------------- contacts-footer --------------------->
-      <div class="footer-container footer">
-      <footer class="container footer footer-container ">
+      <footer class="footer ">
+        <div class="footer-container container">
         <div class="footer-secsion " >
         <a href="./index.html" class="footer-logo logo link" lang="en"
             ><span class="logo-part">Web</span>Studio</a
