--- a/portfolio.html
+++ b/portfolio.html
@@ -236,8 +236,8 @@
       </section>
     </main>
     <!-----------------------contacts-footer-------------------->
-      <div class="footer-container footer">
-      <footer class="container footer footer-container ">
+    <footer class="footer ">
+        <div class="footer-container container">
         <div class="footer-secsion " >
         <a href="./index.html" class="footer-logo logo link" lang="en"
             ><span class="logo-part">Web</span>Studio</a
